refactory
1. service's repo use interface to make it can be mocked
2. implement balance rest api
3. add unittest
